tests/errors/syn_method20.java
public class syn_method20 {
public static int[] ( ) {
 
}
}